--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -23,4 +23,4 @@ Style/SignalException:
   EnforcedStyle: semantic
 
 Style/SpaceInsideHashLiteralBraces:
-  EnforcedStyle: no_space
+  EnforcedStyle: space
